# Self_Aiming

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/armor_board_processor/: armor_board_processor.h
include/video_publisher/: video_publisher.h
src/: armor_board_detector.cpp  armor_board_processor.cpp  main.cpp  tf_processor.cpp  video_publisher.cpp
